idldir = $(pkgdatadir)/idl

idl_DATA = \
	admin.idl \
	commonStationInfo.idl \
	datasource.idl \
	KeyVal.idl \
	kvDataNotifySubscriber.idl \
	kvDataSubscriber.idl \
	kvHintSubscriber.idl \
	kvServiceCommon.idl \
	kvService.idl \
	managerInput.idl \
	newfile.idl \
	qabase.idl

EXTRA_DIST = $(idl_DATA)
